# ipcameras

./: README.md  Taskfile.yml  cameras.html  connect.html  dashboard.html  go.work  go.work.sum  health.html  index.html  manifest.json  service-worker.js  signin.html
.github/workflows/: docker.yml  test.yml  web.yml
api/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
api/app/: app.go
api/app/config/: config.go
api/app/controller/: app.go  cameras.go  currentuser.go  token.go
api/app/env/: env.go
api/app/jwt/: jwt.go
api/app/middleware/: authorized.go  locale.go  timezone.go
api/app/model/: app.go  camera.go  error.go  model.go  token.go  user.go  webrtc.go
api/app/repo/: cameras.go  users.go
api/app/router/: router.go
api/app/service/: camera_pubsub.go  cameras.go  clients.go  discovery.go  peerlistener.go  record.go  rtsp.go  users.go  webrtcserver.go
api/app/util/: crypto.go  reversereader.go  util.go
api/docs/: docs.go  swagger.json  swagger.yaml
api/helm/auth-api/: Chart.yaml  README.md  values.yaml
integration/: go.mod  go.sum  signin_test.go  test.go
internal/: env.js  version.json
internal/immutable/assets/: 0.BMP5Nx9q.css  0.C0TV224Z.css  0.DsL-Oas0.css  _layout.BaagtHZy.css  _layout.CDA38udM.css  _layout.s5BSwGZw.css
internal/immutable/chunks/: Dropdown.BF3UryHu.js  (+163 more)
ui/: Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
ui/src/: app.d.ts  app.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/static/: manifest.json
(+373 files in other folders)
