[package]
default-run = "ipcameras-ui"
description = "aicacia ipcameras ui"
edition = "2021"
ipcamerasors = ["nathanfaucett@gmail.com"]
license = ""
name = "ipcameras-ui"
repository = ""
rust-version = "1.74"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "ipcameras_ui"

[build-dependencies]
tauri-build = {version = "2.0.0-beta.17", features = []}

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tauri = {version = "2.0.0-beta.22", features = []}
tauri-plugin-log = "2.0.0-beta.6"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
