[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "ipcameras-ui"
description = "aicacia ipcameras ui"
edition = "2021"
license = ""
name = "ipcameras-ui"
repository = ""
rust-version = "1.74"
version = "0.1.0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "ipcameras_ui"

[build-dependencies]
tauri-build = {version = "2.0.0-beta.19", features = [] }

[dependencies]
hyper-rustls = "0.26"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2.0.0-beta.24", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
